# QREP

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  KNOWN_ISSUES.md  README.md  REPORT.md  pyproject.toml  qrep-claude-code-prompt.md  qrep-design-doc.md
.claude/: basic-github-tracking.md
.github/ISSUE_TEMPLATE/: bug.yml  chore.yml  config.yml  feature.yml
.github/workflows/: ci.yml
docs/: index.html  viewer-mock.html  viewer.html
docs/demo/: render_l0.json  render_l2.json
docs/sprint-1/: ORCHESTRATOR.md
docs/sprint-2/: ORCHESTRATOR.md  qrep-web-design-doc.md
docs/sprint-3/: ORCHESTRATOR.md  REPORT.md  qrep-sprint-3-plan.md
docs/sprint-4/: DECISIONS.md  ORCHESTRATOR.md  RESEARCH.md  qrep-sprint-4-plan.md
docs/stretch/: NOTES.md
qrep/: __init__.py  bridge.py  cli.py
qrep/construct/: __init__.py  plan.py  strategies.py  yardage.py
qrep/export/: __init__.py  cutlist.py  pdf.py  svg.py  yardage_report.py
qrep/model/: __init__.py  finished_size.py  fixtures.py  io.py  schema.py  (+1 more)
reference/: README.md
scripts/: local_photo_smoke.py  photoreal_baseline.py  sprint4_baseline.py
tests/: conftest.py  test_block_lattice_s1.py  test_bridge.py  test_bridge_detect_quad.py  test_cli.py  test_construct.py  test_corroboration_s2.py  test_exports.py  test_fixture.py  test_fraction_parity.py  test_grid_guards.py  test_known_issues_audit.py  test_l3.py  test_legacy_regression.py  test_model.py  test_pdf.py  test_photoreal_fixtures.py  test_photoreal_metrics.py  test_rectify_tiers.py  test_render.py  test_repeats_verdict.py  test_robustness_33.py  test_roundtrip.py  test_size_engine.py  test_smoke.py  test_svg.py  test_units.py  test_viewer.py  test_vision_units.py  test_wasm_artifacts.py  test_wasm_gate.py
web/: .gitignore  index.html  package-lock.json  package.json  playwright.config.ts  spike.html  tsconfig.app.json  vendor.lock.json  vite.config.ts
(+153 files in other folders)
