[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qrep"
version = "0.1.0"
description = "Quilt Reverse Engineering Platform: photographs to production-ready quilt patterns"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Jake Mismas", email = "jake@jakemismas.com" }]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.9",
    "numpy",
    "opencv-python-headless",
    "scikit-image",
    "Pillow",
    "svgwrite",
    "reportlab",
    "typer",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "pypdf",
]

[project.scripts]
qrep = "qrep.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["qrep"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
